--- a/HelloBluetooth/app/src/main/res/layout/activity_bluetooth_chat.xml
+++ b/HelloBluetooth/app/src/main/res/layout/activity_bluetooth_chat.xml
@@ -1,32 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="16dp">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
         >
+
         <EditText
             android:id="@+id/tMsg"
-            android:layout_width="0dp" android:layout_weight="1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:inputType="text" android:singleLine="true"/>
+            android:layout_weight="1"
+            android:inputType="text"
+            android:singleLine="true"/>
 
-        <Button android:id="@+id/btEnviarMsg"
+        <Button
+            android:id="@+id/btEnviarMsg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/enviar_msg"
-            android:enabled="false" android:onClick="onClickEnviarMsg" />
+            android:enabled="false"
+            android:onClick="onClickEnviarMsg"
+            android:text="@string/enviar_msg"/>
 
-        </LinearLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/tMsgRecebidas"
         android:layout_width="match_parent"
-        android:layout_height="0dp" android:layout_weight="1"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:gravity="top"/>
 
 </LinearLayout>
