--- a/HelloBluetooth/app/src/main/res/layout/activity_beacon_test.xml
+++ b/HelloBluetooth/app/src/main/res/layout/activity_beacon_test.xml
@@ -23,6 +23,7 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/scrollView"
+            android:textSize="18dp"
             android:text="Small Text"
             android:textAppearance="?android:attr/textAppearanceSmall"/>
 
