--- a/HelloBluetooth/app/src/main/res/layout/activity_recomendacao.xml
+++ b/HelloBluetooth/app/src/main/res/layout/activity_recomendacao.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -10,4 +10,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.livroandroid.bluetooth.RecomendacaoActivity">
 
-</RelativeLayout>
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <TableLayout
+            android:id="@+id/tableLayout"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+
+        </TableLayout>
+    </ScrollView>
+</LinearLayout>
