--- a/HelloBluetooth/app/src/main/res/layout/activity_recomendacao.xml
+++ b/HelloBluetooth/app/src/main/res/layout/activity_recomendacao.xml
@@ -20,7 +20,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:shrinkColumns="*"
-            android:stretchColumns="*">
+            android:stretchColumns="*"
+            >
 
         </TableLayout>
     </ScrollView>
