--- a/HelloBluetooth/app/src/main/res/layout/activity_configuracao.xml
+++ b/HelloBluetooth/app/src/main/res/layout/activity_configuracao.xml
@@ -1,13 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="br.com.livroandroid.bluetooth.ConfiguracaoActivity">
 
-</RelativeLayout>
+    <EditText
+        android:id="@+id/edtConfiguracao"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="top"
+        android:inputType="text"
+        android:singleLine="false"
+        android:textAlignment="center"
+        android:textSize="17sp"
+        android:typeface="monospace"/>
+
+    <Button
+        android:id="@+id/btnSalvar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:text="Salvar"
+        android:textAlignment="gravity"
+        android:textSize="18sp"
+        />
+
+</LinearLayout>
